Improved the FILES regexp.

--- a/eddiebrowser/trunk/configs/cpunetapp.cfg
+++ b/eddiebrowser/trunk/configs/cpunetapp.cfg
@@ -1,7 +1,7 @@
 # $Id$
 NAME=CPU Usage
 GROUP=System
-FILES=cpunetapp-(?P<hostname>[a-zA-Z0-9._-]+).rrd
+FILES=cpunetapp-(?P<hostname>[a-zA-Z0-9._-]+)\.rrd
 
 GRAPH_TITLE=%(hostname)s
 GRAPH_VERTICAL_LABEL=cpu use (%)
