Fixed FILES regexp.

--- a/eddiebrowser/trunk/configs/cpulinux.cfg
+++ b/eddiebrowser/trunk/configs/cpulinux.cfg
@@ -1,7 +1,7 @@
 # $Id$
 NAME=CPU Use
 GROUP=System
-FILES=cpulinux-(?P<hostname>[a-zA-Z0-9.-_]+).rrd
+FILES=cpulinux-(?P<hostname>[a-zA-Z0-9._-]+).rrd
 
 GRAPH_TITLE=%(hostname)s
 GRAPH_VERTICAL_LABEL=cpu use (%)
