Extended global configuration file so the location of the data type specific configurations can be defined.

--- a/eddiebrowser/trunk/configs/eddiebrowser.cfg
+++ b/eddiebrowser/trunk/configs/eddiebrowser.cfg
@@ -2,6 +2,28 @@
 #
 # $Id$
 
-#alias crazy Mail Server
-#alias mental Web Server
+## rrd_dir <directory>
+## The location of all the RRD files, which will be stored in subdirectories
+## by data type.  An RRD file's full path would be something like:
+## ${rrd_dir}/<dataname>/<dataname>-<hostname>.rrd
+
+rrd_dir /export/rrd
+
+
+## rrd_conf_dir <directory>
+## Location to look for <dataname>.cfg files.  For each /export/rrd/<dataname>
+## directory, config files are looked for in this order:
+##   1. ${rrd_conf_dir}					- (if defined)
+##   2. ${rrd_dir}/<dataname>/.eddiebrowser.cfg
+
+rrd_conf_dir /opt/eddiebrowser/configs
+
+
+## alias <name> <description>
+## Used to assign friendly descriptions to names (or hostnames) which are
+## displayed in the eddiebrowser interface.
+##
+## Examples:
+## alias crazy Mail Server
+## alias mental Web Server
 
