Added dummy_rrd setting to global config.  This defines the location of the dummy.rrd file which is required to output errors within images.

--- a/eddiebrowser/trunk/configs/eddiebrowser.cfg
+++ b/eddiebrowser/trunk/configs/eddiebrowser.cfg
@@ -19,6 +19,13 @@ rrd_dir /export/rrd
 rrd_conf_dir /opt/eddiebrowser/configs
 
 
+## dummy_rrd </location/of/dummy.rrd>
+## Location of the dummy.rrd file which is used when errors need to be
+## generated within images.
+
+dummy_rrd /opt/eddiebrowser/dummy.rrd
+
+
 ## alias <name> <description>
 ## Used to assign friendly descriptions to names (or hostnames) which are
 ## displayed in the eddiebrowser interface.
